# Engine

./: .gitignore  CMakeLists.txt  Engine.cbp  Engine.dev  Engine.layout  Makefile.win  readme.md
collision/: CollisionHandler.cpp  CollisionHandler.h  CollisionListener.cpp  CollisionListener.h  CollisionPair.cpp  CollisionPair.h
design/: dom.txt  syntax.md
docker/: Dockerfile.cpp-env-ubuntu
engine/: Engine.h  EngineStatistics.h  GameOperatorInterface.h
event/: Dispatcher.h  Event.cpp  Event.h  Listener.h  Propagator.h
font/: Font.cpp  Font.h  FontHandler.cpp  FontHandler.h
global/: Camera.cpp  Camera.h  Color.cpp  Color.h  GlobalValues.h  Globals.cpp  Globals.h  RootObject.cpp  RootObject.h  Tools.cpp  Tools.h  Vector.cpp  (+1 more)
src/: CMakeLists.txt
src/container/: Engine.h
src/debug/: CMakeLists.txt  DebugOutput.hpp
src/engine/: CMakeLists.txt  Engine.hpp  Stopwatch.hpp
src/engine/event/: CMakeLists.txt  EngineEvent.hpp  EngineTimingEvent.hpp  TickEvent.hpp  Timer.hpp  TimerEvent.hpp
src/engine/trait/: CMakeLists.txt  Progressable.hpp
src/event/: CMakeLists.txt  Dispatcher.h  Dispatcher.hpp  Event.cpp  Event.h  Event.hpp  EventStack.cpp  EventStack.h  Listener.cpp  Listener.h  Listener.hpp  Propagator.h  Propagator.hpp
src/filesystem/: File.cpp  File.h
src/keyframe/: CMakeLists.txt  Keyframe.hpp  KeyframeHandler.cpp  KeyframeHandler.hpp  readme.md
src/keyframe/algorithm/: CMakeLists.txt  KeyframeAlgorithm.cpp  KeyframeAlgorithm.hpp  Linear.cpp  Linear.hpp
src/math/: Vector.h
src/math/shapes/: CMakeLists.txt  Intersects.hpp  Shapes.h  Shapes.hpp
src/memory/: CMakeLists.txt
src/memory/recycler/: CMakeLists.txt  Recycler.hpp  RecyclerManager.hpp  Slot.hpp
src/memory/slot_stack/: CMakeLists.txt  Slot.hpp  SlotStackMemory.hpp  StackedTypeSlottedMemory.hpp
src/os/: CMakeLists.txt  WindowHandle.h  WindowParameters.h
src/os/windows/: CMakeLists.txt  Window.h
src/render/: Entity.h
src/script/data/: login.ui
src/script/parser/: AtomicParser.h  Bool.h  Number.h  Parser.h  Word.h
src/script/parser/exception/: ParseException.h
src/script/ui/builder/: UIBuilder.h
src/ui/: CMakeLists.txt  UIEventHandler.cpp  UIEventHandler.hpp
src/ui/element/: Button.h  CMakeLists.txt  Clickable.cpp  Clickable.hpp  Element.cpp  Element.h  Focusable.h  Hitbox.h  Inputtable.cpp  Inputtable.hpp
src/ui/element/hitbox/: Hitbox.hpp
src/ui/element/trait/: CMakeLists.txt  Clickable.cpp  Clickable.hpp  Focusable.h  Hoverable.cpp  Hoverable.hpp  Inputtable.hpp
src/ui/event/: CMakeLists.txt  UIEvent.cpp  UIEvent.hpp
src/ui/event/derived/: CMakeLists.txt  ClickEvent.cpp  ClickEvent.hpp  FocusEvent.h  FocusEvent.hpp  HoverEvent.h  HoverEvent.hpp  InputEvent.h  InputEvent.hpp  MouseOverEvent.h  MouseOverEvent.hpp
src/ui/event/pure/: CMakeLists.txt  KeyEvent.h  KeyEvent.hpp  MouseClickEvent.h  MouseClickEvent.hpp  MouseMoveEvent.h  MouseMoveEvent.hpp
src/ui/event/trait/: CMakeLists.txt  Positional.cpp  Positional.hpp  TargetsElement.cpp  TargetsElement.hpp
src/virtual/memory/: memory.h
src/world/: Entity.h
test/engine/: CMakeLists.txt  main.cpp  test_engine_events.cpp  test_engine_keyframe.cpp  test_engine_timer.cpp
test/keyframe/: CMakeLists.txt  linear.cpp  object.cpp
(+209 files in other folders)
